<<<<<<< HEAD:ChangeLog
2009-12-30  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-get-response-header): Correct a
	reference to an unbound object. This problem was found by highmt.

2009-12-30  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* test/el-test-runner.el (with-network): add macro. body of
	with-network is executed only when 'NETWORK' env var is set.
	* twittering-mode.el (twittering-image-type): No temporary files
	for resing images. Use standard in/out and temporary buffers
	instead.
	(twittering-convert-fix-size): set 48px as the default size of
	icon images.

2009-12-30  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-image-type): Don't generate
	redundant temporary files. The image format is specified by
	the command line instead of a file extension.

2009-12-30  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-image-type): Don't set a third
	argument of `make-temp-file' to work on Emacs21.

2009-12-29  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-get-response-header): Add an
	optional third argument for `search-forward-regexp'.

2009-12-29  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode 0.9.0 release
	
	* twittering-mode.el (twittering-start-http-session): check if
	curl can use https or not.
	(twittering-get-response-body): bug fix: goto the beginning of
	buffer before search-forward. 'xml-parse-region' doesn't return
	when parsing unbalanced XML.
	(twittering-start-http-session): Use call-process instead of
	shell-command-to-string. If 'curl-program' contains space
	characters, shell-command fails.

2009-12-29  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-get-response-body): Return nil
	explicitly when a broken XML data passed into `xml-parse-region'.
	(twittering-http-get-default-sentinel): Adjust callers.
	(twittering-http-post-default-sentinel): Likewise.
